# flcheck

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
src/: cli.rs  command.rs  config.rs  dependency.rs  error.rs  main.rs  pubdev.rs  pubspec.rs  util.rs
