[package]
authors = ["kongo2002 <kongo2002@gmail.com>"]
homepage = "https://github.com/kongo2002/flcheck"
repository = "https://github.com/kongo2002/flcheck"
description = "CLI to check dependencies of flutter applications"
name = "flcheck"
version = "1.0.1"
edition = "2021"

[dependencies]
futures = "0.3.21"
getopts = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
yaml-rust = "0.4.5"
